# Jinja2CppMedium

./: CMakeLists.txt  README.md  compile_release.bat  toolchain_linux_x86_64.cmake
cmake/public/: FindJinja2CppMedium.cmake
example/: main.cpp
